sites/all/themes/custom/gking/gking.css
html,
body,
#page {
  min-height: 100%;
  }

body {
  font: 12px/1.4em 'helvetica neue', helvetica, arial, sans-serif;
  color: #000;
  background: url(images/bg.png) repeat-y 50% 0 #333;
  }

#page {
  position: relative;
  }

/* TYPOGRAPHY */

@font-face {
	font-family: 'ExpresswayRegular';
	src: url('fonts/expressway_rg-webfont.eot');
	src: local('fonts/Expressway'), local('fonts/ExpresswayRgRegular'), url('fonts/expressway_rg-webfont.woff') format('woff'), url('fonts/expressway_rg-webfont.ttf') format('truetype'), url('fonts/expressway_rg-webfont.svg#webfontBZGc47Cg') format('svg');
	font-weight: normal;
	font-style: normal;
  }

h1, h2, #navbar li, #footer {
  font-weight: normal;
	font-style: normal;
	line-height:normal;
	font-family: 'ExpresswayRegular', sans-serif;
	font-size-adjust: 0.53;
  }

p {
  margin: 0 0 1.5em 0;
  }

.biblio-note p {
  margin: 0;
  }

h2 {
  font-size: 21px;
  letter-spacing:1px;
  }

h3, h4 {
  font-weight:bold;
  font-size:1em;
  margin: 0;
  }

h3 {
  color: #6e7a7a;
  margin-top: 10px;
  }

.node-teaser.node-type-scholar-software-project h3 {
  margin:0;
  color:#222;
  }

h3.cv-direct-download {
  background: #717171;
  padding: 3px 15px;
  -moz-border-radius: 20px;
  -webkit-border-radius: 20px;
  border-radius: 20px;
  float: left;
  margin: 0 0 15px 0;
  color: #fff;
  }

h3.cv-direct-download a,
h3.cv-direct-download a:visited {
  color: #fa8b18;
  }

.more-link a {
  text-decoration: underline;
  }

h4 {
  margin-bottom: 27px;
  }

h2.title,
.block h3.title,
#pub_type_tabs h3.title,
.taxonomy-term-child h3.taxonomy-heading,
#block-vsite_menus-1 li {
  margin: 0 -16px .5em -16px;
  padding: 13px 16px 16px 16px;
  background: #fcfcfc;
  border-bottom:1px solid #e5e5e5;
  font: bold 21px/24px arial, helvetica, sans-serif;
  letter-spacing:-0.05em;
  text-indent:-1px;
  }

.node-type-person h2.title {
  padding: 0;
  border: none;
  margin-left: 0;
  margin-right: 0;
  }

.node-type-person h3.title span.position {
  font-weight: normal;
  }

.taxonomy-term-child h3.taxonomy-heading {
  color: #CC6733;
  font-size: 1.4em;
  background: #fff;
  padding-bottom: .1em;
  padding-top: 0;
  }

.taxonomy-term-child .taxonomy-term-child h3.taxonomy-heading {
  padding: 0;
  margin-left:0;
  margin-right: 0;
  margin-bottom: 0;
  margin-top: .5em;
  font-size: 1.2em;
  }

.block h3.title {
  font-size: 1.3em;
  }

#content .node h3.title {
  border: none;
  padding: 0;
  margin:0;
  }

.biblio-separator-bar {
  font-size: 1.2em;
  }

a {
  text-decoration: none;
  }

a:visited {
  color: #59798F;
  }

a:hover {
  text-decoration: underline;
  }

a.more {
 font-weight: bold;
 text-decoration: none;
 font-size: 12px;
 letter-spacing: 0;
 color: #fff;
 padding: 0 10px;
 background: url(images/arrow-white.png) 100% 50% no-repeat transparent;
  }

#content .context-links {
  margin-top: 5px;
  }

#content .context-links ul {
  padding-left: 0 !important;
  }

/*
.section-biocv #content .context-links ul {
  margin-top: -96px;
}
*/

.front .more-link {
  background: none repeat scroll 0 0 #FFFFFF;
  float: right;
  padding: 0 10px 5px;
  text-align: right;
  }

.front .more-link a {
  text-decoration: none;
  font-weight: bold;
  color: #000;
  }

.front .more-link a:hover {
  text-decoration: underline;
  }

#node-3793 a.more {
  color: #5c7677;
  float:right;
  padding: 11px 38px 10px 0;
  }

.block .item-list .pager,
.twitter-followme {
  background:#fff;
  margin: 0 -16px -26px -16px;
  padding: 1em 0;
  border-top: 1px solid #E5E5E5;
  text-align: center;
  }

.block .item-list .pager li {
  margin-bottom: 0;
  }

.page-iqss-gking-research-group #content div.node-type-person ul li {
  padding: 0;
  }

.page-iqss-gking-research-group #content .node ul.links {
  padding-bottom: 5px;
  }

#sidebar-second #block-iqss_gking-areas_of_research {
  background:#3b4e4e;
  }

#sidebar-second #block-iqss_gking-areas_of_research h3.title {
  background: url(images/aor-h3.png) 0 100% repeat-x #504F4B;
  color: #fff;
  margin-left: -16px;
  margin-right: -16px;
  margin-bottom: 0;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 0;
  padding-bottom: 23px;
  border: none;
  font-weight:normal;
  line-height: 38px;
  }

#sidebar-second #block-iqss_gking-areas_of_research a,
#sidebar-second #block-iqss_gking-areas_of_research a:visited {
  color: #fff;
  }

#sidebar-second #block-iqss_gking-areas_of_research a:hover {
  color:#e87702;
  text-decoration: none;
  }

#sidebar-second #block-iqss_gking-areas_of_research h4 {
  margin-bottom: 0;
  color:#68efde;
  }

#sidebar-second #block-iqss_gking-areas_of_research dd {
  display:none;
  }

#sidebar-second #block-iqss_gking-areas_of_research #methods {
  margin-bottom: .5em;
  }


/* Secondary Menu */

#block-vsite_menus-1,
#block-vsite_menus-1 li {
  padding: 0;
  }

#block-vsite_menus-1 li {
  margin: 0;
  font: bold 1.1em/normal verdana, arial, sans-serif;
  }

#block-vsite_menus-1 li.last {
  border: none;
  }

#block-vsite_menus-1 li a, #block-vsite_menus-1 li a:visited {
  color: #444;
  display:block;
  padding: 10px 16px 16px;
  }

#block-vsite_menus-1 li a:hover {
  background: #F58714;
  text-decoration: none;
  color: #fff;
  }

#block-vsite_menus-1 li a.active {
  background: #EFD2B3;
  }

/* BASIC LAYOUT */


#navbar {
  background: url(images/navbar.png) 50% 0 no-repeat transparent;
  }

.front #navbar {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  }

.column {
  padding: 0;
  }

.sidebar-second #content-main {
  padding-left: 0;
  }

#content,
#content-top,
.column .block {
  /*
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  */
  padding: 0 16px 26px 16px;
  border:1px solid #ddd;
  background: #fff;
  }

.front #content {
  background:transparent;
  border: none;
  padding-right: 0;
  padding-left: 0;
  }

#content-top {
  margin-bottom: 0.5em;
  }

#header-left {
  right: 293px;
  }

.wrap {
  width: 984px;
  margin: 0 auto;
  padding: 1px 8px;
  position: relative;
  }
/* ... */

